# tribus

./: .gitignore  Tribus_run_mydata.ipynb  main.py  pyproject.toml
tribus/: __init__.py  classify.py  tribus.py  utils.py
tribus/Tribus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
