[project]
name = "tribus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "anndata==0.9.2",
    "argon2-cffi",
    "arrow",
    "beautifulsoup4",
    "bleach",
    "h5py",
    "igraph",
    "ipykernel",
    "ipython",
    "jedi",
    "jinja2",
    "joblib",
    "jsonschema",
    "jupyterlab",
    "leidenalg",
    "llvmlite",
    "matplotlib",
    "numba",
    "numpy>=1.24",
    "pandas>=2.1",
    "patsy",
    "psutil",
    "pyarrow",
    "pynndescent",
    "pyyaml",
    "pyzmq",
    "scanpy==1.9.3",
    "scikit-learn>=1.3",
    "scipy==1.13.0",
    "seaborn",
    "session-info",
    "statsmodels",
    "tqdm",
    "umap-learn",
    "appdirs",
    "asciitree",
    "cloudpickle",
    "colorcet",
    "et-xmlfile",
    "future",
    "heapdict",
    "hyperopt",
    "imageio",
    "minisom",
    "openpyxl",
    "pillow==9.5.0",
    "pint",
    "py4j",
    "pydantic==1.10.12",
    "pyopengl",
    "pyparsing",
    "pypdf2",
    "pyside6",
    "qtpy",
    "scikit-image",
    "sklearn-som",
    "sphinxcontrib-applehelp",
    "sphinxcontrib-devhelp",
    "sphinxcontrib-htmlhelp",
    "sphinxcontrib-jsmath",
    "sphinxcontrib-qthelp",
    "sphinxcontrib-serializinghtml",
    "tifffile",
    "tomli-w",
    "toolz",
    "widgetsnbextension",
    "wrapt",
    "xlsxwriter"
]